--- a/priv/default.d/jwt_auth.ini
+++ b/priv/default.d/jwt_auth.ini
@@ -12,3 +12,6 @@
   username_claim = sub
 ; Claim that is used as CouchDB roles. The claim must contain array of the users roles.
   roles_claim = roles
+
+; Blacklist tokens
+  blacklist = []
