Change ejwt to jose for JWT verification.

--- a/rebar.config
+++ b/rebar.config
@@ -4,5 +4,6 @@
 {eunit_opts, [verbose, {report,{eunit_surefire,[{dir,"."}]}}]}.
 {clean_files, ["*.eunit", "ebin/*.beam"]}.
 {deps, [
-    {ejwt, ".*", {git, "https://github.com/artefactop/ejwt"}}
+    {jose, ".*", {git, "git://github.com/potatosalad/erlang-jose.git", {branch, "master"}}},
+    {jsx, ".*", {git, "git://github.com/talentdeficit/jsx.git", {branch, "master"}}}
 ]}.
