--- a/rebar.config
+++ b/rebar.config
@@ -5,5 +5,6 @@
 {clean_files, ["*.eunit", "ebin/*.beam"]}.
 {deps, [
     {jose, ".*", {git, "git://github.com/potatosalad/erlang-jose.git", {branch, "master"}}},
-    {jsx, ".*", {git, "git://github.com/talentdeficit/jsx.git", {branch, "master"}}}
+    {jsx, ".*", {git, "git://github.com/talentdeficit/jsx.git", {branch, "master"}}},
+    {meck, ".*", {git, "https://github.com/eproxus/meck.git", {tag, "0.8.3"}}}
 ]}.
