Pin dependency versions.

--- a/rebar.config
+++ b/rebar.config
@@ -4,7 +4,7 @@
 {eunit_opts, [verbose, {report,{eunit_surefire,[{dir,"."}]}}]}.
 {clean_files, ["*.eunit", "ebin/*.beam"]}.
 {deps, [
-    {jose, ".*", {git, "git://github.com/potatosalad/erlang-jose.git", {branch, "master"}}},
-    {jsx, ".*", {git, "git://github.com/talentdeficit/jsx.git", {branch, "master"}}},
+    {jose, ".*", {git, "git://github.com/potatosalad/erlang-jose.git", {tag, "1.7.3"}}},
+    {jsx, ".*", {git, "git://github.com/talentdeficit/jsx.git", {tag, "2.8.0"}}},
     {meck, ".*", {git, "https://github.com/eproxus/meck.git", {tag, "0.8.3"}}}
 ]}.
